Loading UDIM from file is broken if opening into an already loaded tiled image #96984

Closed
opened 2022-04-02 16:56:51 +02:00 by Roman · 18 comments

System Information
Operating system: Windows 10 64
Graphics card: nvidia geforce RTX 2070 super

Blender Version
Broken: 3.1.2, 3.2
Worked: 3.0.1

Exposed by 180b66ae8a

Short description of error
When loading UDIM images from file in Image Editor only first image to all tiles load.

Exact steps for others to reproduce the error

  • Load a tiled texture normally
  • Open up the Image side panel and attempt to load another tiled image (either the same one or different)
  • This method of opening incorrectly uses the raw file name instead of the tokenized form leading to incorrect results
**System Information** Operating system: Windows 10 64 Graphics card: nvidia geforce RTX 2070 super **Blender Version** Broken: 3.1.2, 3.2 Worked: 3.0.1 Exposed by 180b66ae8a **Short description of error** When loading UDIM images from file in Image Editor only first image to all tiles load. **Exact steps for others to reproduce the error** - Load a tiled texture normally - Open up the Image side panel and attempt to load another tiled image (either the same one or different) - This method of opening incorrectly uses the raw file name instead of the tokenized form leading to incorrect results
Author

Added subscriber: @RomanKolosov

Added subscriber: @RomanKolosov

#98354 was marked as duplicate of this issue

#98354 was marked as duplicate of this issue

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I'm not able to reproduce that here (see below). Can you provide a set of steps to reproduce the error and/or a small set of images that do not load?

udims.png

I'm not able to reproduce that here (see below). Can you provide a set of steps to reproduce the error and/or a small set of images that do not load? ![udims.png](https://archive.blender.org/developer/F12964839/udims.png)
Author

Test_UDIM_01.ZIP

Blender v3.1.2 (not work)
Test_UDIM_v3.1.2.mp4

Blender v3.0.1 (work)
Test_UDIM_v3.0.1.mp4

[Test_UDIM_01.ZIP](https://archive.blender.org/developer/F12964894/Test_UDIM_01.ZIP) Blender v3.1.2 (not work) [Test_UDIM_v3.1.2.mp4](https://archive.blender.org/developer/F12964897/Test_UDIM_v3.1.2.mp4) Blender v3.0.1 (work) [Test_UDIM_v3.0.1.mp4](https://archive.blender.org/developer/F12964901/Test_UDIM_v3.0.1.mp4)
Jesse Yurkovich changed title from Loading UDIM from file are broken!!! to Loading UDIM from file is broken if opening into an already loaded tiled image 2022-04-03 00:32:11 +02:00
Jesse Yurkovich self-assigned this 2022-04-03 00:32:11 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Exposed by eec1c16200, not sure if reloading tiled images was broken anyways (was just not noticable in the Image Editor)?

@deadpin : are you working on this?

Exposed by eec1c16200, not sure if reloading tiled images was broken anyways (was just not noticable in the Image Editor)? @deadpin : are you working on this?
Member

Seems to have been working before, will dare setting this to High priority

Seems to have been working before, will dare setting this to High priority

@lichtwerk it was broken before that change (force the image editor to re-draw to see it for builds before the change you mention). The Reload button works as desired. The Browse button does something less than ideal now.

I'll send around a fix later this week probably for this one.

@lichtwerk it was broken before that change (force the image editor to re-draw to see it for builds before the change you mention). The Reload button works as desired. The Browse button does something less than ideal now. I'll send around a fix later this week probably for this one.

Added subscriber: @mont29

Added subscriber: @mont29

@deadpin hey, any news on that issue?

@deadpin hey, any news on that issue?
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Untagging eevee/viewport project as it isn't related.

Untagging eevee/viewport project as it isn't related.

Added subscriber: @T3pp3

Added subscriber: @T3pp3

This issue was referenced by 12642bdeab

This issue was referenced by 12642bdeabeb35802ee196868c9dbd23c153f622

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96984
No description provided.